tests/ui/nll/polonius/flow-sensitive-invariance.nll.stderr
error: lifetime may not live long enough
  --> $DIR/flow-sensitive-invariance.rs:20:17
   |
LL | fn use_it<'a, 'b>(choice: bool) -> Result<Invariant<'a>, Invariant<'b>> {
   |           --  -- lifetime `'b` defined here
   |           |
   |           lifetime `'a` defined here
LL |     let returned_value = create_invariant();
LL |     if choice { Ok(returned_value) } else { Err(returned_value) }
   |                 ^^^^^^^^^^^^^^^^^^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`
   |
   = help: consider adding the following bound: `'b: 'a`
   = note: requirement occurs because of the type `Invariant<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Invariant<'l>` is invariant over the parameter `'l`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> $DIR/flow-sensitive-invariance.rs:20:45
   |
LL | fn use_it<'a, 'b>(choice: bool) -> Result<Invariant<'a>, Invariant<'b>> {
   |           --  -- lifetime `'b` defined here
   |           |
   |           lifetime `'a` defined here
LL |     let returned_value = create_invariant();
LL |     if choice { Ok(returned_value) } else { Err(returned_value) }
   |                                             ^^^^^^^^^^^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of the type `Invariant<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Invariant<'l>` is invariant over the parameter `'l`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

help: `'a` and `'b` must be the same: replace one with the other

error: aborting due to 2 previous errors

